--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+/* ----------------- global rules ------------------ */
 * {
   font-family: "Courier New", Courier, monospace;
-  --main-color: #894a4c;
+  --main-color: #777;
   --main-transition: 0.3s;
   --main-padding: 100px;
+  scroll-behavior: smooth;
 }
 ul li {
   list-style-type: none;
@@ -15,19 +17,94 @@ a {
   font-size: 3rem;
   text-align: center;
 }
+.container {
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-bottom: 50px;
+}
+
+/* Start Components */
+.main-heading {
+  text-align: center;
+  padding: 0 100px;
+}
+.main-heading h2 {
+  font-weight: normal;
+  font-size: 40px;
+  position: relative;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+.main-heading h2::before {
+  content: "";
+  position: absolute;
+  width: 120px;
+  background-color: black;
+  left: 50%;
+  height: 2px;
+  bottom: -20px;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.main-heading h2::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  left: 50%;
+  height: 15px;
+  bottom: -28px;
+  border: 2px solid black;
+  border-radius: 50%;
+  background: white;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.main-heading p {
+  width: 550px;
+  margin: 0 auto 100px;
+  color: #777;
+  line-height: 2;
+}
+/* End Components */
+
 /* ------- header -------- */
+
 .header {
   display: flex;
   justify-content: space-between;
-  background-image: linear-gradient(180deg, #894a4c, #f8b6b8);
-  padding: 10px 20px;
+  padding: 15px 30px;
+  margin-bottom: 50px;
+}
+.links {
+  display: flex;
+  justify-self: center;
 }
 .links ul {
   display: flex;
   flex-direction: row;
   gap: 40px;
 }
-.links ul li:hover {
+.links ul li a {
+  font-size: 1.2rem;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.links ul li a:hover {
+  box-shadow: 20px 20px 5px 5px var(--main-color);
+  box-shadow: 10px 10px 5px red;
   font-weight: bold;
 }
 .logo {
@@ -45,34 +122,47 @@ a {
 }
 .intro {
   margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .who {
-  color: #894a4c;
+  color: black;
   font-weight: bold;
   font-size: 2rem;
   margin-bottom: 0;
 }
 .me {
   margin: 25px 40px 43px 23px;
+  position: relative;
+  /* top: 45px;
+  left: 65px; */
 }
 .me img {
   max-width: 100%;
-  width: 340rem;
-  border-radius: 40%;
-  -webkit-border-radius: 40%;
-  -moz-border-radius: 40%;
-  -ms-border-radius: 40%;
-  -o-border-radius: 40%;
+  width: 40rem;
+  box-shadow: 20 20 5px 13px var(--main-color);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
-
+.name {
+  font-size: 4rem;
+  margin-top: 0;
+}
+.def {
+  /* font-weight: bold; */
+  font-size: 1.5rem;
+}
 /* -------------- about us section ------------ */
 .about-us {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
   gap: 60px;
-  background-image: linear-gradient(180deg, #894a4c, #f8b6b8);
-  color: white;
   padding-block: 20px;
+  margin-top: 9rem;
 }
 .about-us h2,
 .services h2 {
@@ -80,11 +170,59 @@ a {
 }
 .about-us ul li,
 .services ul li {
-  list-style: numbers;
   line-height: 1.6rem;
   margin-bottom: 5px;
 }
 
+/* skills  */
+.skills {
+  width: 95%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+}
+.skill h3 {
+  display: flex;
+  justify-content: space-between;
+}
+.skill h3 span {
+  color: var(--main-color);
+  font-weight: bold;
+  font-size: 12px;
+  border: 1px solid black;
+  padding: 3px 5px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.skills .the-progress {
+  width: 100%;
+  background-color: #ddd;
+  height: 30px;
+  border-radius: 5px;
+  position: relative;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.skills .the-progress span {
+  background-color: var(--main-color);
+  height: 100%;
+  position: absolute;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+/* experince */
+.experince li {
+  font-weight: bold;
+  font: 3rem;
+}
 /* ----------------- services section ---------------- */
 /* .services{
   display: grid;
@@ -106,7 +244,6 @@ a {
 }
 .services .box {
   background-color: white;
-  box-shadow: 0 12px 20px 0 rgb(0 0 0 / 0.2), 0 2px 4px 0 rgb(0, 0, 0 / 0.12);
   counter-increment: services;
   position: relative;
   transition: var(--main-transition);
@@ -135,6 +272,9 @@ a {
   -o-transition: var(--main-transition);
 }
 .services .box:hover {
+  /* box-shadow: 0 12px 20px 0 rgb(0 0 0 / 0.2), 0 2px 4px 0 rgb(0, 0, 0 / 0.12); */
+  /* box-shadow: 0 12px 20px 0 black, 0 2px 4px 0 black; */
+  /* box-shadow: 10px 10px 2px black; */
   transform: translateY(-10px);
   -webkit-transform: translateY(-10px);
   -moz-transform: translateY(-10px);
@@ -157,6 +297,7 @@ a {
 }
 .services a {
   color: var(--main-color);
+  font-weight: bold;
 }
 .services .box .info {
   position: relative;
@@ -206,8 +347,8 @@ a {
 }
 
 /* ------------- contact us section ----------------- */
-.contact{
-  background-image: linear-gradient(180deg, #894a4c, #f8b6b8);
+.contact {
+  /* background-image: linear-gradient(180deg, #894a4c, #f8b6b8); */
   padding-block: 30px;
 }
 .form {
@@ -250,61 +391,92 @@ a {
   -o-transition: var(--main-transition);
 }
 .form [type="submit"]:hover {
-  background-color: var(--main-color-alt);
+  background-color: black;
 }
 .content {
   text-align: center;
   padding: 0 20px;
 }
-.social{
+.social {
   display: flex;
   justify-content: center;
-  gap: 15px;
-  margin-top: 50px;
+  gap: 45px;
+  margin-top: 80px;
 }
-.social a{
-  color: white;
-  font-size: 2rem;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -moz-transition: .3s;
-  -ms-transition: .3s;
-  -o-transition: .3s;
-}
-.social a:hover{
+.social a {
   color: var(--main-color);
+  font-size: 1.8rem;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.social a:hover {
+  color: black;
 }
 
 /* ------------------ footer ------------------------- */
-footer{
+footer {
   background-color: var(--main-color);
   text-align: center;
   color: white;
   padding-block: 30px;
 }
-footer p{
-  margin-top:0;
+footer p {
+  margin-top: 0;
   font-weight: bold;
 }
-footer  span{
+footer span {
   font-size: 2rem;
 }
 
-
 /* ---------- media queries ---------- */
-@media (max-width: 700px){
-  .header{
-    flex-direction: column;
+@media (max-width: 600px) {
+  .links ul {
+    gap: 10px;
   }
-  .logo{
-    text-align: center;
+  .links ul li a {
+    font-size: 0.8rem;
+  }
+  .name {
+    font-size: 3rem;
+  }
+  .who {
+    font-size: 1.5rem;
+    margin-top: 0;
+  }
+
+  .def {
+    margin: 0;
   }
 }
-@media (max-width:800px) {
-  .home{
+
+@media (max-width: 700px) {
+  .header {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+  }
+  .logo {
+    text-align: center;
+  }
+  .me {
+    display: flex;
+  }
+}
+@media (max-width: 800px) {
+  .home {
     flex-direction: column;
   }
-  .me img{
+  .me img {
     width: 35rem;
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .about-us {
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   }
 }
