--- a/css/style.css
+++ b/css/style.css
@@ -96,15 +96,21 @@ a {
 }
 .links ul li a {
   font-size: 1.2rem;
+  padding: 5px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .links ul li a:hover {
-  box-shadow: 20px 20px 5px 5px var(--main-color);
-  box-shadow: 10px 10px 5px red;
+  /* box-shadow: 20px 20px 5px 5px var(--main-color); */
+  box-shadow: 0px 0px 5px 2px var(--main-color);
   font-weight: bold;
 }
 .logo {
@@ -141,7 +147,8 @@ a {
 .me img {
   max-width: 100%;
   width: 40rem;
-  box-shadow: 20 20 5px 13px var(--main-color);
+  box-shadow: 0px 0px 10px 15px var(--main-color);
+  /* box-shadow: 10px 10px 5px red; */
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -177,8 +184,8 @@ a {
 /* skills  */
 .skills {
   width: 95%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+  /* padding-left: 2.5%;
+    padding-right: 2.5%; */
 }
 .skill h3 {
   display: flex;
