--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+@import url("base.css");
+
 /* ----------------- global rules ------------------ */
 * {
-  font-family: "Courier New", Courier, monospace;
+  /* font-family: "Courier New", Courier, monospace; */
+  font-family: "Noto Sans", sans-serif;
   --main-color: #777;
   --main-transition: 0.3s;
   --main-padding: 100px;
+  --main-transition: 0.5s;
   scroll-behavior: smooth;
 }
 ul li {
@@ -78,12 +83,18 @@ a {
 /* End Components */
 
 /* ------- header -------- */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  background-color: hsla(0, 0%, 47%, 0.27);
+}
 
 .header {
   display: flex;
   justify-content: space-between;
   padding: 15px 30px;
-  margin-bottom: 50px;
 }
 .links {
   display: flex;
@@ -126,6 +137,7 @@ a {
 /* -------- home section --------- */
 .home {
   display: flex;
+  margin-top: 120px;
 }
 .intro {
   margin-left: 50px;
@@ -227,18 +239,8 @@ a {
 }
 
 /* experince */
-.experince li {
-  font-weight: bold;
-  font: 3rem;
-}
-/* ----------------- services section ---------------- */
-/* .services{
-  display: grid;
-  grid-template-columns: repeat(auto-fill , minmax(350px , 1fr));
-  gap: 60px;
-  margin-top: 40px;
-} */
 
+/* ----------------- services section ---------------- */
 .services {
   padding-top: var(--main-padding);
   padding-bottom: var(--main-padding);
@@ -343,16 +345,45 @@ a {
   -ms-transform: skewX(-20deg);
   -o-transform: skewX(-20deg);
 }
-.work {
-  display: flex;
-  justify-content: center;
+/* previous work  */
+.services .show-me {
+  color: white;
+  padding: 55px 15px;
+  background-color: rgba(0, 0, 0, 0.57);
+  font-size: 1.8rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: .7s;
+  -webkit-transition: .7s;
+  -moz-transition: .7s;
+  -ms-transition: .7s;
+  -o-transition: .7s;
 }
-.work ul li {
-  font-weight: bold;
+
+.services .card:hover .show-me {
+  /* width: 0;
+  height: 0; */
+  opacity: 0;
+  display: none;
 }
-.prev {
-  margin-bottom: 0;
-}
+
+/* .services .card-wide .show-me{
+  padding: 110px 45px;
+  font-size: 3rem;
+} */
+
+/* .services .show-more::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 70%;
+  background-color: red;
+} */
 
 /* ------------- contact us section ----------------- */
 .contact {
