--- a/css/base.css
+++ b/css/base.css
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
-@import url('style.css');
+@import url("style.css");
 
 body {
-  /* background: rgb(19, 19, 19); */
-  /* color: #fff; */
   font-family: "Noto Sans", sans-serif;
 }
 
@@ -14,32 +12,34 @@ body {
   align-items: center;
   background: #353535;
   color: #fff;
-  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,    rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
+  cursor: pointer;
+  box-shadow: rgba(3, 8, 20, 0.1) 0px 0.15rem 0.5rem,
+    rgba(2, 8, 20, 0.1) 0px 0.075rem 0.175rem;
   height: 100%;
   width: 100%;
   border-radius: 4px;
-  transition: all .7s;
+  transition: all 0.4s;
   overflow: hidden;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   filter: grayscale(100%);
   -webkit-filter: grayscale(100%);
-  -webkit-transition: all .7s;
-  -moz-transition: all .7s;
-  -ms-transition: all .7s;
-  -o-transition: all .7s;
+  -webkit-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -ms-transition: all 0.4s;
+  -o-transition: all 0.4s;
 }
 
-.card:hover {
+/* --------------- card hover ------------------ */
+.card-hover {
   box-shadow: rgba(2, 8, 20, 0.1) 0px 0.35em 1.175em,
     rgba(2, 8, 20, 0.08) 0px 0.175em 0.5em;
-  transform: translateY(-3px) scale(1.1);
-  -webkit-transform: translateY(-3px) scale(1.02);
-  -moz-transform: translateY(-3px) scale(1.1);
-  -ms-transform: translateY(-3px) scale(1.1);
-  -o-transform: translateY(-3px) scale(1.1);
+  transform: translateY(-3px) rotate(7deg) scale(1.05);
+  -webkit-transform: translateY(-3px) rotate(7deg) scale(1.05);
+  -moz-transform: translateY(-3px) rotate(7deg) scale(1.05);
+  -ms-transform: translateY(-3px) rotate(7deg) scale(1.05);
+  -o-transform: translateY(-3px) rotate(7deg) scale(1.05);
   filter: grayscale(0);
   -webkit-filter: grayscale(0);
 }
-
