--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
 @import url("base.css");
-
+@import url("button_switch.css");
 /* ----------------- global rules ------------------ */
 * {
   /* font-family: "Courier New", Courier, monospace; */
@@ -9,8 +9,19 @@
   --main-transition: 0.3s;
   --main-padding: 100px;
   --main-transition: 0.5s;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --theme-color: white;
+  --text-color: black;
+
   scroll-behavior: smooth;
 }
+body {
+  background-color: var(--theme-color);
+  color: var(--text-color);
+}
+
 ul li {
   list-style-type: none;
 }
@@ -44,7 +55,8 @@ a {
   content: "";
   position: absolute;
   width: 120px;
-  background-color: black;
+  /* background-color: black; */
+  border: 1px solid;
   left: 50%;
   height: 2px;
   bottom: -20px;
@@ -61,9 +73,8 @@ a {
   left: 50%;
   height: 15px;
   bottom: -28px;
-  border: 2px solid black;
+  border: 2px solid;
   border-radius: 50%;
-  background: white;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
@@ -82,56 +93,186 @@ a {
 }
 /* End Components */
 
-/* ------- header -------- */
-header {
+/*
+=============== 
+Sidebar
+===============
+*/
+.sidebar-toggle {
   position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-  background-color: hsla(0, 0%, 47%, 0.27);
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 30px;
-}
-.links {
-  display: flex;
-  justify-self: center;
-}
-.links ul {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-}
-.links ul li a {
-  font-size: 1.2rem;
-  padding: 5px;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
+  top: 21px;
+  right: 2rem;
+  background-color: var(--theme-color);
+  font-size: 1.5rem;
+  color: black;
+  transition: var(--main-transition);
+  cursor: pointer;
+  animation: bounce 2s ease-in-out infinite;
+  box-shadow: 0px 0px 10px 3px white;
+  border: white;
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
-.links ul li a:hover {
-  /* box-shadow: 20px 20px 5px 5px var(--main-color); */
-  box-shadow: 0px 0px 5px 2px var(--main-color);
-  font-weight: bold;
+.sidebar-toggle:hover {
+  color: var(--main-color);
 }
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.sidebar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1.5rem;
+}
+.close-btn {
+  font-size: 1.75rem;
+  background: transparent;
+  border-color: transparent;
+  color: var(--main-color);
+  transition: var(--main-transition);
+  cursor: pointer;
+  color: var(--clr-red-dark);
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
+}
+.close-btn:hover {
+  color: var(--clr-red-light);
+  transform: rotate(360deg);
+}
+.logo {
+  justify-self: center;
+  height: 60px;
+}
+.links {
+  padding-left: 0;
+  margin: 0;
+}
+.links a {
+  display: block;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  padding: 1rem 1.5rem;
+  color: var(--main-color);
+  transition: var(--main-transition);
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
+}
+.links a:hover {
+  background: var(--main-color);
+  color: white;
+  padding-left: 2rem;
+}
+.social-icons {
+  /* justify-self: center; */
+  display: flex;
+  padding-bottom: 2rem;
+  justify-content: center;
+}
+.social-icons a {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: var(--main-color);
+  transition: var(--main-transition);
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
+}
+.social-icons a:hover {
+  color: black;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -40px;
+  width: 100%;
+  height: 100%;
+  background: white;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  row-gap: 1rem;
+  box-shadow: 3px 1px 34px 1px black;
+  transition: var(--main-transition);
+  transform: translate(-100%);
+  -webkit-transform: translate(-100%);
+  -moz-transform: translate(-100%);
+  -ms-transform: translate(-100%);
+  -o-transform: translate(-100%);
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
+}
+.show-sidebar {
+  transform: translate(35px);
+  -webkit-transform: translate(35px);
+  -moz-transform: translate(35px);
+  -ms-transform: translate(35px);
+  -o-transform: translate(35px);
+}
+@media screen and (min-width: 676px) {
+  .sidebar {
+    width: 400px;
+  }
+}
+
+/* ------- header -------- */
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  background-color: rgb(0 0 0 / 64%);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 17px 0px 17px;
+}
+
 .logo {
   font-weight: bold;
   cursor: pointer;
   font-size: 1.8rem;
+  transition: var(--main-transition);
+  -webkit-transition: var(--main-transition);
+  -moz-transition: var(--main-transition);
+  -ms-transition: var(--main-transition);
+  -o-transition: var(--main-transition);
 }
+/* .logo:hover {
+  box-shadow: 0px 24px 4px -18px black;
+} */
 .logo span {
-  color: var(--main-color);
-  font-size: 3rem;
+  color: white;
+  font-size: 2rem;
 }
 
 /* -------- home section --------- */
@@ -146,7 +287,6 @@ header {
   justify-content: center;
 }
 .who {
-  color: black;
   font-weight: bold;
   font-size: 2rem;
   margin-bottom: 0;
@@ -159,7 +299,7 @@ header {
 }
 .me img {
   max-width: 100%;
-  width: 40rem;
+  width: 33rem;
   box-shadow: 0px 0px 10px 15px var(--main-color);
   /* box-shadow: 10px 10px 5px red; */
   border-radius: 50%;
@@ -175,6 +315,7 @@ header {
 .def {
   /* font-weight: bold; */
   font-size: 1.5rem;
+  text-transform: capitalize;
 }
 /* -------------- about us section ------------ */
 .about-us {
@@ -200,15 +341,19 @@ header {
   /* padding-left: 2.5%;
     padding-right: 2.5%; */
 }
+.skill {
+  margin-bottom: 5px;
+}
 .skill h3 {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 7px;
 }
 .skill h3 span {
   color: var(--main-color);
   font-weight: bold;
   font-size: 12px;
-  border: 1px solid black;
+  border: 1px solid;
   padding: 3px 5px;
   border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -219,7 +364,7 @@ header {
 .skills .the-progress {
   width: 100%;
   background-color: #ddd;
-  height: 30px;
+  height: 20px;
   border-radius: 5px;
   position: relative;
   -webkit-border-radius: 5px;
@@ -250,17 +395,22 @@ header {
 .services .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  gap: 30px;
+  gap: 35px;
 }
 .services .box {
   background-color: white;
   counter-increment: services;
   position: relative;
+  border-radius: 7px;
   transition: var(--main-transition);
   -webkit-transition: var(--main-transition);
   -moz-transition: var(--main-transition);
   -ms-transition: var(--main-transition);
   -o-transition: var(--main-transition);
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 .services .box::before {
   content: "";
@@ -312,8 +462,13 @@ header {
 .services .box .info {
   position: relative;
   text-align: right;
-  background-color: #f9f9f9;
+  background-color: #eee;
   padding: 15px;
+  border-radius: 7px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  -ms-border-radius: 7px;
+  -o-border-radius: 7px;
 }
 .services .box .info::before {
   content: "0" counter(services);
@@ -329,6 +484,11 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom-left-radius: 7px;
+  -webkit-border-radius: ;
+  -moz-border-radius: ;
+  -ms-border-radius: ;
+  -o-border-radius: ;
 }
 .services .box .info::after {
   content: "";
@@ -356,42 +516,34 @@ header {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
-  transition: .7s;
-  -webkit-transition: .7s;
-  -moz-transition: .7s;
-  -ms-transition: .7s;
-  -o-transition: .7s;
+  transition: 0.4s;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
 }
 
 .services .card:hover .show-me {
-  /* width: 0;
-  height: 0; */
   opacity: 0;
   display: none;
 }
-
-/* .services .card-wide .show-me{
-  padding: 110px 45px;
-  font-size: 3rem;
-} */
-
-/* .services .show-more::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 70%;
-  background-color: red;
-} */
 
 /* ------------- contact us section ----------------- */
 .contact {
   /* background-image: linear-gradient(180deg, #894a4c, #f8b6b8); */
   padding-block: 30px;
+  margin-bottom: 70px;
 }
+form {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  /* gap: 40px; */
+  justify-items: center;
+  width: 550px;
+  margin: auto;
+}
+
 .form {
-  display: flex;
   flex-basis: 100%;
   justify-content: center;
   align-items: center;
@@ -399,23 +551,55 @@ header {
 .form .input {
   display: block;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   padding: 15px;
   border: none;
-  border-bottom: 1px solid #ccc;
-  background-color: #f9f9f9;
+  border-bottom: 2px solid #aaa;
+  background-color: #ccc;
+  color: white;
+  position: relative;
   caret-color: var(--main-color);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.inputs div {
+  position: relative;
+}
+.inputs div .input ~ .error {
+  position: absolute;
+  top: 48px;
+  font-size: 0.9rem;
+}
+/* form textarea ~ .error {
+  top: 48px;
+} */
+.area,
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .form textarea.input {
   resize: none;
-  height: 200px;
+  height: 5.4rem;
+}
+.form .area div {
+  position: relative;
+}
+.form textarea.input ~ .error {
+  position: absolute;
+  top: 118px;
+  font-size: 0.9rem;
 }
 .form .input:focus {
   outline: none;
 }
 .form [type="submit"] {
   display: block;
-  width: 110%;
+  width: 100%;
   padding: 15px;
   border: none;
   background-color: var(--main-color);
@@ -428,6 +612,11 @@ header {
   -moz-transition: var(--main-transition);
   -ms-transition: var(--main-transition);
   -o-transition: var(--main-transition);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 .form [type="submit"]:hover {
   background-color: black;
@@ -436,40 +625,77 @@ header {
   text-align: center;
   padding: 0 20px;
 }
-.social {
-  display: flex;
-  justify-content: center;
-  gap: 45px;
-  margin-top: 80px;
+.invalid {
+  color: red !important;
 }
-.social a {
-  color: var(--main-color);
-  font-size: 1.8rem;
-  transition: 0.3s;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -ms-transition: 0.3s;
-  -o-transition: 0.3s;
+.valid {
+  color: green !important;
 }
-.social a:hover {
-  color: black;
-}
-
 /* ------------------ footer ------------------------- */
 footer {
-  background-color: var(--main-color);
+  background-color: #353535;
   text-align: center;
   color: white;
-  padding-block: 30px;
+  border-top-left-radius: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  /* height: 80px; */
+}
+footer .img {
+  position: relative;
+  top: -70px;
+  right: -10px;
+}
+footer img {
+  max-width: 100%;
+  width: 250px;
 }
 footer p {
   margin-top: 0;
   font-weight: bold;
 }
 footer span {
-  font-size: 2rem;
+  font-size: 1.7rem;
+  color: black;
+  position: relative;
 }
 
+.social {
+  display: flex;
+  justify-content: center;
+  gap: 45px;
+  padding-right: 10px;
+  flex-direction: column;
+  gap: 10px;
+}
+.social a {
+  color: white;
+  font-size: 1.4rem;
+  border: 1px solid;
+  padding: 7px 10px;
+  border-radius: 50%;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.social a:hover {
+  color: white;
+  background-color: black;
+  border: none;
+}
+footer .text {
+  position: absolute;
+  bottom: 12px;
+  right: 30%;
+}
 /* ---------- media queries ---------- */
 @media (max-width: 600px) {
   .links ul {
@@ -485,18 +711,32 @@ footer span {
     font-size: 1.5rem;
     margin-top: 0;
   }
-
   .def {
     margin: 0;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+  }
+
+  footer img {
+    width: 180px;
+  }
+  footer .text {
+    font-size: 0.6rem;
+  }
+  .social {
+    gap: 5px;
+  }
+  .social a {
+    font-size: 0.7rem;
   }
 }
 
 @media (max-width: 700px) {
-  .header {
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-  }
   .logo {
     text-align: center;
   }
@@ -513,9 +753,16 @@ footer span {
     max-width: 100%;
   }
 }
-
+@media (min-width: 1000px) {
+  footer .text {
+    right: 33%;
+  }
+}
 @media (min-width: 1200px) {
   .about-us {
     grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  }
+  form {
+    /* grid-template-columns: repeat(auto-fill, minmax(500px, 1fr)); */
   }
 }
