--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -376,10 +376,22 @@
                     </button>
                     <div class="skills mb-3">
                         <% for( let i = 0; i < skills.length; i++ ) { %>
-                            <div class="skill">
+                            <div class="skill border rounded  p-2  mb-3">
                                 <h3><%- skills[i].skillName%>  <span><%-skills[i].percentage%></span></h3>
                                 <div class="the-progress">
                                     <span style="width: <%=skills[i].percentage%>% "></span>
+                                </div>
+                                <div class="forms d-flex justify-content-end">
+                                    <form action="/<%=skills[i].skillName%>  ?_method=DELETE" class=" " method="post">
+                                        <button class="btn-danger btn py-0 px-2 mt-1">
+                                            <i class="far fa-trash fs-6 text-light"></i>
+                                        </button>
+                                    </form>
+                                    <button class="btn-secondary btn py-0 px-2 mt-1 ms-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                        <i class="far fa-edit fs-6 text-light"></i>
+                                    </button>
+                                    <form action="" method="">
+                                    </form>
                                 </div>
                             </div>
                         <% } %>
@@ -413,7 +425,34 @@
                             </div>
                         </form>
             </div>
+            </div>
         </div>
+        <!-- <div class="modal editModal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Edit Personal Information</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/" method="post">
+                            <div class="form-group flex-nowrap mb-3">
+                                <span class="input-group-text" id="addon-wrapping">Skill Name</span>
+                                <input required type="text" name="skillName" id="skillName"  class="form-control" aria-label="Username" aria-describedby="addon-wrapping">
+                            </div>
+                            <div class="form-group flex-nowrap mb-3">
+                                <label for="percentage" class="form-label me-4">Percentage</label>
+                                <input required type="range" name="percentage"  class="form-range" id="percentage">
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Add</button>
+                            </div>
+                            </div>
+                        </form>
+            </div>
+            </div>
+        </div> -->
         <!-- <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
