--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,8 +1,6 @@
 <div class="sideBar col-3 col-md-2 " style="background-color: #e5e5e5;  height:100vh; width: 220px">
     <div class="profile col rounded-pill bg-white mt-2 d-flex align-items-center m-auto flex-column" 
-        style="    width: 180px;
-        height: 80vh;"
-    >
+        style="    width: 180px; height: 80vh;">
     <div class="profile-content ">
         <div class="img-container">
             <img src="imgs/profileIimage.png"  alt="" width="150"class="pb-4 rounded-circle  profile-img">
@@ -10,7 +8,6 @@
         </div>
        <div class="name-container">
         <h5 class="name fw-bolde text-center">Hamad Bakeel
-        <button class="btn edit-button"><img src="imgs/edit.png" alt=""></button>
     </h5>   
     </div>
     </div>
